--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -1,10 +1,21 @@
 .hero {
+  color: $white;
+  padding: 5rem 0;
+  background-image: url("../assets/img/hero-sm.jpg"),
+    linear-gradient(360deg, rgba(36, 76, 90, 0.8) 41.3%, #46c1bd 82.6%);
+  background-blend-mode: multiply;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  &--lg {
     color: $white;
-    padding: 5rem 0;
-    background-image: url("../assets/img/hero-sm.jpg"), linear-gradient(360deg, rgba(36, 76, 90, 0.8) 41.3%, #46C1BD 82.6%);
+    padding: 12rem 0;
+    background-image: url("../assets/img/hero.jpg"),
+      linear-gradient(360deg, rgba(36, 76, 90, 0.8) 41.3%, #46c1bd 82.6%);
     background-blend-mode: multiply;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-
+  }
 }
