testimonials almost ready

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -2,7 +2,7 @@
 $balmesvetClaro: #2AD2C9;
 $h2-color: #244C5A;
 $background: #D4F6F4;
-$gray: #E6E6E6;
+$gray: #EFEFEF;
 $white: #FDFDFD;
 $yellow: #FFB525;
 $p-color: #000000;
@@ -16,3 +16,4 @@ $light: $white;
 $dark: $p-color;
 $body-bg: $background;
 $footer-color: $white;
+$danger: $gray
