--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -17,8 +17,6 @@
     }
 
     &__photo {
-        filter: drop-shadow(-15px 15px 30px rgba(0, 0, 0, 0.1));
-        box-shadow: 25px;
-        // padding-right: 3rem;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
     }
 }
