--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,13 @@
 //Vars & Resets 
 @import 'globals'; //->siempre van primero para que se apliquen sus estilos al Framework
 
+
 //Frameworks
 @import 'config';
+
+
+//Fonts
+@import 'fonts';
 
 //Sections
 @import 'sections/navbar';
