--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -16,4 +16,5 @@ $light: $white;
 $dark: $p-color;
 $body-bg: $background;
 $footer-color: $white;
-$danger: $gray
+$danger: $gray;
+$info: #9B9B9B;
