--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -8,14 +8,17 @@
   background-position: center;
   background-repeat: no-repeat;
 
-  &--lg {
-    color: $white;
+  @include media-breakpoint-up(lg) {
     padding: 12rem 0;
     background-image: url("../assets/img/hero.jpg"),
       linear-gradient(360deg, rgba(36, 76, 90, 0.8) 41.3%, #46c1bd 82.6%);
-    background-blend-mode: multiply;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  }
+
+  &__buttons {
+    @include media-breakpoint-up(lg) {
+      display: flex;
+      justify-content: center;
+      gap: 3rem;
+    }
   }
 }
