--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -6,12 +6,14 @@ $gray: #EFEFEF;
 $white: #FDFDFD;
 $yellow: #FFB525;
 $p-color: #000000;
+$iconsContact: #46C1BD;
 
 
 //REESCRIBIENDO VARS DE BOOTSTRAP
 $primary: $yellow;
 $secondary: $h2-color;
 $success: $balmesvetClaro;
+$warning: $iconsContact;
 $light: $white;
 $dark: $p-color;
 $body-bg: $background;
